--- a/.gitignore
+++ b/.gitignore
@@ -36,7 +36,7 @@ ehthumbs.db
 ehthumbs_vista.db
 
 # Folder config file
-Desktop.ini
+#Desktop.ini
 
 # Recycle Bin used on file shares
 $RECYCLE.BIN/
